<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/couleur_principal"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            style="@style/text_view_style"
            android:text="@string/titre"
            android:textColor="@color/couleur_secondaire"
            app:layout_constraintBottom_toTopOf="@id/btn_multijoueur"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

    <Button
            android:id="@+id/btn_multijoueur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/couleur_principal"
            android:backgroundTint="@color/couleur_secondaire"
            android:layout_marginVertical="20dp"
            style="@style/btn_style"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titre"
            app:layout_constraintBottom_toTopOf="@id/btn_joueur_vs_ia"
            android:text="@string/text_btn_multijoueur" />

    <Button
            android:id="@+id/btn_joueur_vs_ia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/btn_style"
            android:textColor="@color/couleur_principal"
            android:backgroundTint="@color/couleur_secondaire"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_multijoueur"
            app:layout_constraintBottom_toTopOf="@id/btn_setting"
            android:text="@string/text_btn_solo" />

    <Button
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/couleur_principal"
            android:backgroundTint="@color/couleur_secondaire"
            android:layout_marginVertical="20dp"
            style="@style/btn_style"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_joueur_vs_ia"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/setting" />


</androidx.constraintlayout.widget.ConstraintLayout>