<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/couleur_principal"
        tools:context=".SettingActivity">

    <TextView
            app:layout_constraintVertical_chainStyle="packed"
            android:id="@+id/text_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:fontFamily="@font/yatra_one"
            android:textSize="40sp"
            android:textColor="@color/couleur_secondaire"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_damier" />

    <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/text_damier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damier"
            android:fontFamily="@font/yatra_one"
            android:textSize="30sp"
            android:textColor="@color/couleur_secondaire"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_setting"
            app:layout_constraintBottom_toTopOf="@id/radio_group_couleur_damier" />

    <RadioGroup
            android:layout_marginTop="30dp"
            android:id="@+id/radio_group_couleur_damier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_damier"
            app:layout_constraintBottom_toTopOf="@id/layout_couleur_damier"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

        <RadioButton
                android:id="@+id/radio_couleur_damier_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="34dp"
                />

        <RadioButton
                android:id="@+id/radio_couleur_damier_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="34dp"
                />

        <RadioButton
                android:id="@+id/radio_couleur_damier_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="34dp"
                />

    </RadioGroup>

    <LinearLayout
            android:id="@+id/layout_couleur_damier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/radio_group_couleur_damier"
            app:layout_constraintBottom_toTopOf="@id/radio_group_taille_damier"
            android:gravity="center"
            >

        <LinearLayout
                android:id="@+id/linear_layout_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                >

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:background="@color/color_case_jouer_1" />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:background="@color/color_case_non_jouer_1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linear_layout_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                >

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:background="@color/color_case_jouer_2" />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:background="@color/color_case_non_jouer_2" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
                android:id="@+id/linear_layout_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                >

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:background="@color/color_case_jouer_3" />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:background="@color/color_case_non_jouer_3" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <RadioGroup
            android:layout_marginTop="30dp"
            android:id="@+id/radio_group_taille_damier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/layout_couleur_damier"
            app:layout_constraintBottom_toTopOf="@id/layout_taille_damier"
            >

        <RadioButton
                android:id="@+id/radio_taille_damier_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                />

        <RadioButton
                android:id="@+id/radio_taille_damier_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                />

        <RadioButton
                android:id="@+id/radio_taille_damier_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                />

    </RadioGroup>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_taille_damier"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/radio_group_taille_damier"
            app:layout_constraintBottom_toTopOf="@id/text_ia_difficult"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6"
                android:fontFamily="@font/yatra_one"
                android:textSize="30sp"
                android:textColor="@color/couleur_secondaire"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                android:fontFamily="@font/yatra_one"
                android:textSize="30sp"
                android:textColor="@color/couleur_secondaire"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:fontFamily="@font/yatra_one"
                android:textSize="30sp"
                android:textColor="@color/couleur_secondaire"
                android:textStyle="bold"
                android:layout_marginHorizontal="14dp"
                />

    </LinearLayout>


    <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/text_ia_difficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ia_difficult"
            android:fontFamily="@font/yatra_one"
            android:textSize="30sp"
            android:textColor="@color/couleur_secondaire"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_taille_damier"
            app:layout_constraintBottom_toTopOf="@id/radio_group_difficult" />

    <RadioGroup
            android:layout_marginTop="10dp"
            android:id="@+id/radio_group_difficult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/text_ia_difficult"
            app:layout_constraintBottom_toTopOf="@id/layout_difficult"
            >

        <RadioButton
                android:id="@+id/radio_difficult_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                />

        <RadioButton
                android:id="@+id/radio_difficult_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                />

        <RadioButton
                android:id="@+id/radio_difficult_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                />

    </RadioGroup>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_difficult"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/radio_group_difficult"
            app:layout_constraintBottom_toTopOf="@id/btn_valide_setting"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficult_1"
                android:fontFamily="@font/yatra_one"
                android:textSize="25sp"
                android:textColor="@color/couleur_secondaire"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficult_2"
                android:fontFamily="@font/yatra_one"
                android:textSize="25sp"
                android:textColor="@color/couleur_secondaire"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficult_3"
                android:fontFamily="@font/yatra_one"
                android:textSize="25sp"
                android:textColor="@color/couleur_secondaire"
                android:textStyle="bold"
                android:layout_marginHorizontal="14dp"
                />

    </LinearLayout>

    <Button
            android:id="@+id/btn_valide_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/couleur_principal"
            android:backgroundTint="@color/couleur_secondaire"
            android:layout_marginVertical="40dp"
            style="@style/btn_style"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_difficult"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/valider" />

</androidx.constraintlayout.widget.ConstraintLayout>